- configurei o kafka no docker-compose.yaml e implementei o producer